# talk-to-folder

./: .gitignore  README.md  pyrightconfig.json  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  answer_generator.py  embeddings.py  models.py  prompts.py  vector_store.py
backend/app/api/: __init__.py  dependencies.py  schemas.py
backend/app/api/routes/: auth.py  chat.py  folders.py
backend/app/core/: config.py
backend/app/domain/: __init__.py
backend/app/domain/chat/: models.py  service.py
backend/app/domain/documents/: __init__.py  chunking.py  file_types.py  models.py
backend/app/domain/folders/: __init__.py  models.py  parser.py  service.py
backend/app/integrations/: __init__.py
backend/app/integrations/google/: __init__.py  drive.py  extraction.py  oauth.py
backend/app/storage/: __init__.py  chroma_store.py  supabase_vector_store.py
backend/migrations/: 001_vector_store.sql
backend/tests/ai/: test_answer_generator.py  test_embeddings.py
backend/tests/api/: test_routes.py
backend/tests/core/: test_config.py
backend/tests/domain/chat/: test_chat_service.py
backend/tests/domain/documents/: test_chunking.py  test_file_types.py
backend/tests/domain/folders/: test_parser.py  test_service.py
backend/tests/integrations/google/: test_drive.py  test_extraction.py  test_oauth.py
backend/tests/storage/: test_chroma_store.py  test_supabase_vector_store.py
docs/: architecture.md  deployment.md  development.md  setup.md  tradeoffs.md
frontend/: eslint.config.js  (+4 more)
(+25 files in other folders)
